flont-step"修正1"

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -5,8 +5,8 @@
         team
       %li.main-chat__group-info__box__group-mem
         Member : member
-    %a.edit-space{href:"#"}
-      .edit-btn
+    .main-chat__group-info__edit-space
+      =link_to "#" ,class:"edit-btn" do
         edit
   .main-chat__group-message
     .main-chat__group-message__message-box
