--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -89,17 +89,18 @@
         margin-left: 40px;
       }
     }
-    .edit-space{
-      text-decoration: none;
+    &__edit-space{
+      color: #38aef0;
       margin-top: 28px;
+      height: 40px;
+      width: 72px;
+      font-size: 16px;
+      border:solid 1px;
+      line-height: 40px;
+      text-align: center;
       .edit-btn{
+        text-decoration: none;
         color: #38aef0;
-        font-size: 16px;
-        border:solid 1px;
-        height: 40px;
-        width: 72px;
-        line-height: 40px;
-        text-align: center;
       }
     }
   }
