--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -30,8 +30,8 @@
         line-height: 20px;
         width: 60px;
         text-align: right;
-        a{
-          color: #ffffff;;
+        .icon{
+          color: #ffffff;
           margin-left: 5px;
         }
       }              
