--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,14 @@
   .side-bar__user-name
     .side-bar__user-name__top-itmes
       %p.side-bar__user-name__top-itmes__name 
-        masa
+        = current_user.name
       %ul.side-bar__user-name__top-itmes__btn
         %li.side-bar__user-name__top-itmes__edit
-          =link_to "#" do
-            = icon('fas', 'edit')
+          =link_to do
+            = icon('fas', 'edit', class: 'icon')
         %li.side-bar__user-name__top-itmes__create
-          =link_to "#" do
-            = icon('fas', 'cog')
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog', class: 'icon')
                 
 
   .side-bar__group-list
