--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -41,17 +41,17 @@
     background-color: #2f3e51;
     height: calc(100vh - 100px);
     padding:20px;
-    .group{
-      &__group-box{
+    &__group{
+      .group-box{
         text-decoration: none;
-        &__name{
-          color: #ffffff;
+        color: #ffffff;
+        .name{
           font-size: 15px;
           height: 23px;
           line-height: 23px;
           margin-bottom: 5px;
         }
-        &__last-message{
+        .last-message{
           color: #ffffff;
           font-size: 11px;
           height: 17px;
@@ -147,24 +147,28 @@
     padding:20px 40px;
     position: absolute;
     bottom: 0;
-    .input-form{
-      height: 50px;
+     .new_message{ 
       width: 100%;
+      height: 50px;
       display: flex;
       justify-content: space-between;
-      .input-box{
+      
+    }
+    &__message{
+      height: 50px;
+      width: calc( 100vw - 300px - 100px );
+    }
+    &__btn{
+      height: 50px;
+      margin-right: 15px;
+      display: flex;
+      justify-content: space-between;
+      position: relative;
+      &__image{
         height: 50px;
-        width: 100%;
-        margin-right: 15px;
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-        &__message{
-          height: 50px;
-          width: 100% ;
-          margin: 0px 10px;
-        }
-        .input-box__pict{
+        width: 100% ;
+        margin: 0px 10px;
+        .icon{
           height: 50px;
           width: 50px;
           line-height: 50px;
@@ -172,20 +176,19 @@
           color: black;
           position: absolute;
           right: 10px;
-          .input-box__pict__file{
-            display: none;
-          }
+        }
+        .hidden{
+          display: none;
         }
       }
-      .send-btn{
-        height: 50px;
-        width: 100px;
-        color: white;
-        line-height: 50px;
-        text-align: center;
-        background-color: skyblue;
-      }
     }
+    &__send-btn{
+      height: 50px;
+      width: 100px;
+      color: white;
+      line-height: 50px;
+      text-align: center;
+      background-color: skyblue;
+    } 
   }
-
 }
