--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -112,8 +112,8 @@
     height: calc(100% - 100px - 90px);
     padding: 40px 35px;
     &__message-box{
-      height: 105px;
       width: 250px;
+      padding-bottom: 46px;
       &__message-info{
         height: 22px;
         width: 210px;
@@ -127,7 +127,7 @@
         }
         &__message-data{
           color: #999999;
-          font-size: 12px;
+          font-size: 10px;
         }
       }
       &__message{
@@ -136,7 +136,10 @@
         height: 20px;
         width: 210px;
         line-height: 20px;
-        margin-bottom: 46px;
+        &__image{
+          height: 113px;
+          width: 200px;
+        }
       }
    }
   }
