view_last-message

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -45,13 +45,13 @@
       .group-box{
         text-decoration: none;
         color: #ffffff;
-        .name{
+        &__name{
           font-size: 15px;
           height: 23px;
           line-height: 23px;
           margin-bottom: 5px;
         }
-        .last-message{
+        &__last-message{
           color: #ffffff;
           font-size: 11px;
           height: 17px;
