--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -119,6 +119,7 @@
     background-color: #fafafa; 
     height: calc(100% - 100px - 90px);
     padding: 40px 35px;
+    overflow: scroll;
     &__message-box{
       width: 250px;
       padding-bottom: 46px;
