setting_message-id

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.main-chat__group-message__message-box
+.main-chat__group-message__message-box{data: {message: {id: message.id}}}
   .main-chat__group-message__message-box__message-info
     .main-chat__group-message__message-box__message-info__message-user
       = message.user.name
