--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -122,7 +122,7 @@
     overflow: scroll;
     &__message-box{
       width: 250px;
-      padding-bottom: 46px;
+      margin-bottom: 46px;
       &__message-info{
         height: 22px;
         width: 210px;
@@ -142,12 +142,9 @@
       &__message{
         color: #434A54;
         font-size: 14px;
-        height: 20px;
         width: 210px;
         line-height: 20px;
         &__image{
-          height: 113px;
-          width: 200px;
         }
       }
    }
