--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -42,6 +42,7 @@
     height: calc(100vh - 100px);
     padding:20px;
     &__group{
+      margin-bottom: 40px;
       .group-box{
         text-decoration: none;
         color: #ffffff;
@@ -56,7 +57,6 @@
           font-size: 11px;
           height: 17px;
           line-height: 17px;
-          margin-bottom: 40px;
         }
       }
     }
@@ -72,7 +72,7 @@
     height: 100px;
     padding: 0px 40px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between;;
     &__box{
       height: 100px;
       width: 250px;
@@ -89,14 +89,12 @@
         height: 20px;
         line-height: 20px;
         position: relative;
-        margin-left: 40px;
         display: flex;
-        justify-content: space-between;
+        flex-direction: row;
         &__mem{
           color: #999999;
           font-size: 12px;
           line-height: 20px;
-
         }
       }
     }
@@ -160,26 +158,24 @@
       width: 100%;
       height: 50px;
       display: flex;
-      justify-content: space-between;
-      
+      justify-content: space-between; 
     }
-    &__message{
+    &__box{
       height: 50px;
-      width: calc( 100vw - 300px - 100px );
-    }
-    &__btn{
-      height: 50px;
-      margin-right: 15px;
+      width: calc( 100vw - 300px - 200px );
       display: flex;
       justify-content: space-between;
       position: relative;
-      &__image{
+      &__message{
+        width: 100%;
+        border: none;
+        outline: none;
+        padding: 0px 10px;
+      }
+      &__btn{
         height: 50px;
-        width: 100% ;
-        margin: 0px 10px;
         .icon{
           height: 50px;
-          width: 50px;
           line-height: 50px;
           text-align: center;
           color: black;
@@ -189,6 +185,7 @@
         .hidden{
           display: none;
         }
+      
       }
     }
     &__send-btn{
@@ -197,7 +194,7 @@
       color: white;
       line-height: 50px;
       text-align: center;
-      background-color: skyblue;
+      background-color: #38aef0;
     } 
   }
 }
