--- a/app/assets/stylesheets/modules/group.scss
+++ b/app/assets/stylesheets/modules/group.scss
@@ -58,6 +58,7 @@ li {
     color: #fff;
     background-color: #38aef0;
     border: 0;
+    margin-left: 270px;
   }
   &__field {
     margin-top: 30px;
