--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -15,8 +15,8 @@
   .side-bar__group-list
     - current_user.groups.each do |group|
       .side-bar__group-list__group
-        = link_to group_messages_path(group), class:"group-box" do
-          .side-bar__group-list__group__name
+        = link_to group_messages_path(group), class:"side-bar__group-list__group__box" do
+          .side-bar__group-list__group__box__name
             = group.name
-          .side-bar__group-list__group__last-message
+          .side-bar__group-list__group__box__last-message
             = group.show_last_message
